Fix progress bar remaining visible after upload (replace with spinner icon)

--- a/Resources/styles/dataManager.element.scss
+++ b/Resources/styles/dataManager.element.scss
@@ -194,11 +194,6 @@
       padding-left: 0;
     }
   }
-  .progress-bar {
-    float: none;
-    height: 3px;
-    transition: none;
-  }
   hr {
     border: none;
     background: #fff;
